# Luma

./: .clang-format  CMakeLists.txt
src/Common/DoAfterScope/: CMakeLists.txt
src/Common/DoAfterScope/include/Common/: DoAfterScope.h
src/Common/DoAfterScope/tests/: DoAfterScopeTests.cpp
src/Common/Geometry/: CMakeLists.txt
src/Common/Geometry/include/Common/Geometry/: Point.h  PointF.h  Size.h
src/Common/Geometry/include/Geometry/: Point.h  PointF.h  Rect.h  Rect_fwd.h  Size.h  Vector.h  Vector_fwd.h
src/Common/Geometry/tests/: PointTest.cpp  VectorTest.cpp
src/Common/Signal/: CMakeLists.txt
src/Common/Signal/include/Common/: Signal.h
src/Common/Signal/tests/: SignalTest.cpp
src/GL/ASCII/: CMakeLists.txt
src/GL/ASCII/include/GL/ASCII/v130/: Word.h
src/GL/ASCII/include/GL/ASCII/v130_2/: Word.h
src/GL/ASCII/include/GL/ASCII/v150/: DebugShader.h  Word.h
src/GL/ASCII/include/GL/ASCII/v150/Debug/: Common.h  TextBoxShader.h  TextLineShader.h
src/GL/ASCII/src/v130/: Word.cpp
src/GL/ASCII/src/v130_2/: Word.cpp
src/GL/ASCII/src/v150/: DebugShader.cpp  TextBoxShader.cpp  TextLineShader.cpp  Word.cpp
src/GL/Buffer/: CMakeLists.txt
src/GL/Buffer/include/GL/: Buffer.h
src/GL/Buffer/src/: Buffer.cpp
src/GL/GLASCII/: CMakeLists.txt
src/GL/GLASCII/include/GLASCII/impl/v130/: Word.h
src/GL/GLASCII/src/impl/v130/: Word.cpp
src/GL/GLASCII/src/impl/v150/: Word.cpp
src/GL/GLShaderProgram/: CMakeLists.txt
src/GL/GLShaderProgram/src/: Shader.cpp
src/GL/GLWindow/: CMakeLists.txt
src/GL/GLWindow/include/GL/: Window.h
src/GL/GLWindowNext/: CMakeLists.txt
src/GL/GLWindowNext/include/GL/: KeyEvent.h  MouseEvent.h  Widget.h
src/GL/Geometry/: CMakeLists.txt
src/GL/Geometry/include/: Point.h  PointF.h  Size.h
src/GL/Geometry/tests/: PointTest.cpp
src/GL/GuiCore/: CMakeLists.txt
src/GL/GuiCore/include/GL/: Application.h  HoverEvent.h  Monitor.h  MouseButtonEvent.h  MouseEvent.h  MoveEvent.h  Object.h  (+4 more)
src/GL/GuiCore/src/: Application.cpp  ApplicationPrivate.cpp  ApplicationPrivate.h  ImplCast.inl  Monitor.cpp  Object.cpp  Widget.cpp  Window.cpp
src/GL/ShaderProgram/: CMakeLists.txt
src/GL/ShaderProgram/include/GL/: Shader.h  ShaderProgram.h
src/GL/ShaderProgram/src/: Shader.cpp  ShaderProgram.cpp
src/GL/VertexArray/: CMakeLists.txt
src/GL/VertexArray/include/GL/: VertexArray.h
src/GL/VertexArray/src/: VertexArray.cpp
src/GL/Widget/: CMakeLists.txt
src/GL/Widget/src/: FrameRateWidget.cpp  LabelWidget.cpp  Widget.cpp  Window.cpp
src/GL/Window/: CMakeLists.txt
src/GL/Window/include/GL/: ResizeEvent.h
src/GL/Window/src/: Window.cpp
src/GL/WindowNext/src/: Widget.cpp
src/GLASCII/: CMakeLists.txt
src/GLASCII/include/GLASCII/v150/Debug/: Common.h  TextBoxShader.h  TextLineShader.h
src/GLASCII/src/v150/Debug/: TextBoxShader.cpp  TextLineShader.cpp  Utils.inl
src/HelloASCII/: main.cpp
src/HelloWorld/: main.cpp
src/Luma/: CMakeLists.txt
src/Luma/Core/: CMakeLists.txt
src/Luma/Core/include/Luma/Core/: Application.h  CharEvent.h  HoverEvent.h  KeyEvent.h  Monitor.h  MouseEvent.h  MoveEvent.h  Object.h  Rect.h  Rect_fwd.h  RenderEvent.h  ResizeEvent.h  ScaleEvent.h  ScrollEvent.h  Signal.h  Vector.h  Vector_fwd.h  Window.h
src/Luma/Core/src/: Application.cpp  ApplicationImpl.h  ImplCast.inl  Monitor.cpp  Object.cpp  Window.cpp  WindowImpl.inl
src/Luma/GL/: CMakeLists.txt
src/Luma/GL/include/Luma/GL/: Buffer.h  ShaderProgram.h  VertexArray.h
src/Luma/GL/src/: Buffer.cpp  ShaderProgram.cpp  VertexArray.cpp
src/Luma/Geom/: CMakeLists.txt
src/Luma/Geom/include/Luma/Geom/: Rect.h  Rect_fwd.h  UiRect.h  UiRect_fwd.h  Vector.h  Vector_fwd.h
src/Luma/Geom/tests/: VectorTest.cpp
src/Luma/RaiiUtils/: CMakeLists.txt
src/Luma/RaiiUtils/include/Luma/RaiiUtils/: DoAfterScope.h
src/Luma/RaiiUtils/tests/: DoAfterScopeTests.cpp
src/Luma/Signal/: CMakeLists.txt
src/Luma/Signal/include/Luma/Signal/: Signal.h  Signal_fwd.h
src/Shader/: CMakeLists.txt
src/Shader/ASCII/: CMakeLists.txt
src/Shader/ASCII/include/Shader/ASCII/Debug/: Common.h
src/Shader/ASCII/include/Shader/ASCII/Debug/v150/: TextBoxShader.h  TextLineShader.h
src/Shader/ASCII/src/Debug/v150/: TextBoxShader.cpp  TextLineShader.cpp
src/Shader/Basic/: CMakeLists.txt
src/Shader/Basic/include/Shader/Basic/v110/: BasicShader.h
src/Shader/Basic/src/v110/: BasicShader.cpp
src/Shader/Triangle/: CMakeLists.txt
src/Shader/Triangle/include/Shader/Triangle/v150/: TriangleShader.h
src/Shader/Triangle/src/v150/: TriangleShader.cpp
src/Shader/Utils/: CMakeLists.txt
src/Shader/Utils/include/Shader/: Utils.h
src/Shader/Utils/src/: Utils.cpp
src/Targets/1_HelloWindow/: CMakeLists.txt
src/Targets/1_HelloWindow/src/: main.cpp
src/Targets/2_HelloTriangle/: CMakeLists.txt
src/Targets/2_HelloTriangle/src/: main.cpp
src/Targets/HelloASCII/: CMakeLists.txt
src/Targets/HelloASCII/src/: main.cpp
src/Targets/HelloFPS/: CMakeLists.txt
src/Targets/HelloFPS/src/: main.cpp
src/Targets/HelloTerminal/: CMakeLists.txt
src/Targets/HelloTerminal/src/: main.cpp
src/Targets/HelloWindow/: CMakeLists.txt
src/Targets/HelloWindow/src/: main.cpp
src/Targets/HelloWindowEvents/: CMakeLists.txt
src/Targets/HelloWindowEvents/src/: main.cpp
src/Targets/HelloWindowFPS/: CMakeLists.txt
src/Targets/HelloWindowFPS/src/: main.cpp
src/Targets/HelloWorld/: CMakeLists.txt
src/Targets/HelloWorld/src/: main.cpp
src/Targets/LumaEvents/: CMakeLists.txt
src/Targets/LumaEvents/src/: main.cpp
src/Targets/LumaGLASCII/: CMakeLists.txt
src/Targets/LumaGLASCII/src/: main.cpp
src/Targets/LumaTerminal/: CMakeLists.txt
src/Targets/LumaTerminal/include/: Terminal.h
src/Targets/LumaTerminal/src/: Terminal.cpp  TerminalImpl.inl  main.cpp
src/Targets/LumaWindow/: CMakeLists.txt
src/Targets/LumaWindow/src/: main.cpp
src/utils/Signal/: CMakeLists.txt
src/utils/Signal/tests/: SignalTest.cpp
src/utils/do_after_scope/: CMakeLists.txt
src/utils/do_after_scope/include/: do_after_scope.h
src/utils/do_after_scope/tests/: do_after_scope_tests.cpp
(+9 files in other folders)
